--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,24 @@
+.container-fluid {
+    justify-content: center;
+    align-items: center;
+    color: #eee;
+    text-align:center;
+    /* Overlay */
+    background: linear-gradient(68.15deg, #0a0a0a 20.62%, rgb(8, 4, 53) 80.61%);
+    background-blend-mode: color;
+    border-color: rgb(255, 0, 0);
+    border:10px;
+    border-style:solid;
+    
+  }
+h4{
+    color: #eee;
+
+}
+a {
+    text-decoration: none;
+    color: inherit;
+  }
 #navbar {
     height: 120px;
 }
@@ -23,20 +44,27 @@
 /* Showcase */
 #showcase-container {
     padding: 40px;
+    text-align: center;
+
+    
 }
 
 /* Clients */
+
 #clients-container {
     grid-template-columns: repeat(1, 1fr);
 }
 #inscricaoForm{
     background-color: #fff;
-    display:inline ;
+    display:grid ;
+    width:"auto";
+    height:"1800px" !important;
   
   }
 .client {
-    width: 90%;    padding: 10px;
-
+    width: 80%; 
+    padding: 10px;
+    color: #eee; 
 }
 
 /* Features */
@@ -82,3 +110,18 @@
 .gallery-image {
     width: 100%;
 }
+
+#footer {
+    background: #222;
+    color: #eee;
+    padding: 30px;
+    text-align: center;
+    width: 100%;;
+    height: 100%;
+    border-color: rgb(0, 0, 0);
+    border:10px;
+    border-style:solid;
+
+  }
+
+  
