--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,26 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+.container-fluid {
+  justify-content: center;
+  align-items: center;
+  color: #eee;
+  text-align:center;
+  /* Overlay */
+  background: linear-gradient(68.15deg, #0a0a0a 20.62%, rgb(8, 4, 53) 80.61%);
+  background-blend-mode: color;
+  border-color: rgb(255, 0, 0);
+  border:20px;
+  border-style:solid;
 
+
+}
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+h4{
+  color: #eee;
+
 }
 
 body {
@@ -17,18 +34,17 @@ a {
 
 .btn {
   display: inline;
-  padding: 15px 60px;
   font-size: 1.1rem;
   text-transform: uppercase;
   background: #111;
   color: #eee;
   border-radius: 5px;
   transition: background 500ms ease;
-  box-shadow: 2px 2px 2px 2px #00a9cf;
+  box-shadow: 1px 1px 1px 1px #00a9cf;
   border-color: #00a9cf;
-  width: 400px;
-  height: 70px;
-  font-size: 24px;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
 }
 
 .btn:hover {
@@ -80,7 +96,7 @@ a {
 
 /* Showcase */
 #showcase {
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -92,7 +108,8 @@ a {
 }
 
 #showcase-container {
-  text-align: center;
+  text-align: center;  
+
 }
 
 #showcase-container h2 {
@@ -107,16 +124,18 @@ a {
 /* Clients */
 #clients {
   width: 100%;
-  background: #eee;
   color: #111;
-  padding: 50px;
+  padding: 10px;
+  height:100%;
+  justify-content: center;
+
 }
 
 #clients-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
-  padding: 15px;
+  padding: 10px;
   align-items: center;
 }
 
@@ -189,7 +208,6 @@ a {
   font-size: 1.2rem;
   background: linear-gradient(68.15deg, #0a0a0a 20.62%, rgb(8, 4, 53) 80.61%);
   padding: 15px;
-  margin: 15px 0;
   border-radius: 5px;
 }
 
@@ -197,7 +215,7 @@ a {
   width: 100%;
   background: linear-gradient(68.15deg, #0a0a0a 20.62%, rgb(8, 4, 53) 80.61%);
   color: #eee;
-  padding: 50px;
+  padding: 10px;
   align-items: center;
 }
 
@@ -210,7 +228,7 @@ a {
 }
 #inscricaoForm {
   background-color: #fff;
-  display: inline;
+  height:"1800px"
 }
 
 /* Gallery */
@@ -242,4 +260,7 @@ a {
   color: #eee;
   padding: 30px;
   text-align: center;
+  width: 100%;
+  height: 100%;
+
 }
